# projetoRestauranteUniversitario

./: .gitignore  LICENSE  README.md  m.c  meson.build  p1simularu.c  txt.c
diagrams/: classes.txt  logica_de_bancada.txt  sequencia.txt
include/: bancada.h  config.h  descanso.h  fila.h  ingrediente.h  ingredientes&vasilhas.c  log.h  rando.h  relatorio.h  relogio.h  restaurante.h  servente.h  usuario.h  vasilha.h  xalloc.h
src/: bancada.c  descanso.c  fila.c  ingrediente.c  log.c  main.c  rando.c  relatorio.c  relogio.c  restaurante.c  servente.c  usuario.c  vasilha.c
